Confirm button link now disabled for default; when enabled and clicked - redirect user to /ConfirmationPage; Cancel Button link now working; obs.: ConfirmationPage still not displaying user choices

--- a/src/style.css
+++ b/src/style.css
@@ -229,12 +229,12 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* visibility: hidden; */
+    visibility: hidden;
 }
 
-/* .appearbox {
+.appearbox {
     visibility: visible;
-} */
+}
 
 .transparent-background {
     position: fixed;
@@ -244,12 +244,12 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: rgba(255, 255, 255, 0.8);
-    /* display: none; */
+    display: none;
 }
 
-/* .appearback {
+.appearback {
     display: initial;
-} */
+}
 
 .confirm {
     margin: 21px 0px 28px 0px;
@@ -309,8 +309,6 @@ body {
     background-color: #50D074;
 }
 
-
-
-
-
-
+.disabled-link {
+    pointer-events: none;
+}
